@@ -4,7 +4,7 @@
 '\" See the file "license.terms" for information on usage and redistribution
 '\" of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 '\" 
-'\" RCS: @(#) $Id: StringObj.3,v 1.13.4.14 2009/04/10 18:09:29 dgp Exp $
+'\" RCS: @(#) $Id: StringObj.3,v 1.13.4.15 2011/01/25 19:23:22 dgp Exp $
 '\" 
 .so man.macros
 .TH Tcl_StringObj 3 8.1 Tcl "Tcl Library Procedures"
@@ -330,7 +330,10 @@ Tcl_Obj *objPtr = \fBTcl_ObjPrintf\fR("Value is %d", x);
 .PP
 If the value of \fIformat\fR contains internal inconsistencies or invalid
 specifier formats, the formatted string result produced by
-\fBTcl_ObjPrintf\fR will be an error message describing the error.
+\fBTcl_ObjPrintf\fR will be an error message describing the error. 
+It is impossible however to provide runtime protection against 
+mismatches between the format and any subsequent arguments.
+Compile-time protection may be provided by some compilers.
 .PP
 \fBTcl_AppendPrintfToObj\fR is an appending alternative form
 of \fBTcl_ObjPrintf\fR with functionality equivalent to
